# chad

./: .env.example  .gitignore  INTEGRATIONS.md  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.pull.yml  docker-compose.yml  oldignoremd.md
backend/: .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 01ec39d715f3_add_correlation_rule_version_history.py  02695b14ed48_add_jira_config.py  02fd40e826a4_remove_correlation_rule_is_enabled.py  030207644969_add_misp_imported_rules_table.py  03272c7aea4c_add_system_logs_table.py  03ae51f937b5_add_correlation_rule_comments.py  04bf62g048c6_add_correlation_rule_snooze.py  05cg73h159d7_add_user_notification_preferences.py  06dh84i260e8_add_exception_group_id.py  07057fb3790e_add_correlation_rules_tables.py  07ip_allowlist_ratelimit_add.py  08jq_add_rule_title_unique.py  0974cdf67845_add_health_thresholds_to_index_patterns.py  09kr_add_entity_field_type.py  1cb102ecf21a_add_health_metrics.py  20260127_add_auth_method_to_users.py  20260127_fix_sso_users.py  20260127_remove_both_from_auth_method.py  20260201_add_detection_latency.py  20260201_add_index_pattern_mode.py  20260201_add_poll_state_metrics.py  20260201_add_timestamp_field.py  20260202_add_updated_by_to_index_patterns.py  20260206_add_ioc_alert_toggles.py  20260206_drop_alerts_table.py  20260206_nullable_rule_fks_for_delete.py  20260613_add_deployment_requests.py  20260613_add_teams_rbac.py  20260613_encrypt_secrets_at_rest.py  20260614_add_audit_hash_chain.py  20260614b_add_sso_providers_scim.py  20260614c_add_environments.py  20260614d_add_git_sync.py  20260614e_add_saved_views.py  20260614f_add_cases.py  20260614g_maker_checker_hardening.py  20260614h_add_organizations.py  20260614i_add_report_schedules.py  20260618j_add_preset_mapping_origin.py  21cc341a6216_add_provider_to_webhooks.py  (+43 more)
backend/app/: main.py  worker.py
backend/app/api/: ai_copilot.py  alerts.py  api_keys.py  attack.py  audit.py  audit_settings.py  auth.py  cases.py  circuit_breakers.py  correlation_rules.py  deployment_requests.py  deps.py  enrichment_webhooks.py  environments.py  export.py  external.py  field_mappings.py  git_import.py  health.py  index_patterns.py  jira.py  logs.py  metrics.py  misp.py  misp_feedback.py  misp_sync.py  mode.py  notifications.py  organizations.py  permissions.py  queue.py  recommendations.py  report_schedules.py  reports.py  rule_ci.py  rules.py  saved_views.py  scim.py  settings.py  sigmahq.py  (+9 more)
backend/app/core/: audit.py  audit_chain.py  circuit_breaker.py  config.py  csrf.py  encryption.py  errors.py  exceptions.py  logging.py  metrics.py  middleware.py  org_constants.py  org_context.py  org_middleware.py  redis.py  regex_safe.py  sanitization.py  security.py  vf_session.py
backend/app/db/: base.py  (+1 more)
backend/docs/: Code-Duplication-Guide.md  Structured-Logging-Guide.md  Type-Safety-Guide.md
backend/scripts/: test_pull_alert.py  test_push_alert.py  verify_audit_chain.py
backend/tests/: conftest.py  test_ai_mapping.py  test_config.py  test_field_mapping.py  test_sanitization.py  test_threshold.py  test_worker.py
(+606 files in other folders)
