[project]
name = "chad-backend"
version = "0.1.0"
description = "CHAD - Cyber Hunting And Detection Backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
# Strict type checking
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Gradually enable this
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

# Output
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "pysigma.*",
    "pysigma_backend.*",
    "mitreattack.*",
    "geoip2.*",
    "authlib.*",
]
ignore_missing_imports = true
